# grascii

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  alphabet.py  build_dict.py  cli_options.txt  compiler.py  controller.py  create_grascii_regex.py  defaults.py  dict_test.txt  extra_words.txt  grammar.py  grammar.txt  grammer.txt  graph_test.py  grascii.lark  grascii.py  grascii.sh  grascii_dict1916.txt  lark_test.py  phrases.lark  pyproject.toml  regen.py  search.py  setup.cfg  setup.py  similarities.py  similarityGraph.txt  starter.conf  test_grascii.py  test_phrasing.py  transformer.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: .gitignore  CHANGELOG.md  README.rst  conf.py  configuration.rst  dephrase.rst  dictionary.md  dictionary.rst  grascii-lang.md  gsearch.rst  index.rst  interpretation.rst  language.rst  reference.rst  requirements.txt  search.md  similarity.md  similarity.rst
docs/images/: sim_graph.graphml
dsrc/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  grascii_dict1916.txt  h.txt  j.txt  k.txt  m.txt  o.txt  p.txt  q.txt  r.txt  s.txt  u.txt  v.txt  w.txt  z.txt
dsrc/preanniversary/: a.txt  c.txt  g.txt  i.txt  l.txt  n.txt  q.txt  t.txt  w.txt  x.txt  y.txt  z.txt
grammars/: phrases.lark
grascii/: .gitignore  __init__.py  __main__.py  appdirs.py  build.py  build_dict.py  config.py  defaults.conf  defaults.py  dephrase.py  grammar.py  install.py  interactive.py  interpret.py  interpreter.py  lark_ambig_tools.py  list.py  main.py  metrics.py  new_search.py  outline.py  parser.py  regen.py  search.py  searchers.py  similarities.py  types.py  uninstall.py  utils.py  validator.py
grascii/dictionary/: .__init__.py.swo  __init__.py  __main__.py  build.py  common.py  install.py  list.py  pipeline.py  uninstall.py
grascii/grammars/: __init__.py  grascii.lark  phrases.lark  phrases_extended.lark  vocab.lark
grascii/words/: __init__.py  extra_words.txt
notes/: cli_options.txt  phrasing.txt
old/: compiler.py
scripts/: build_dictionaries.py  create_grascii_regex.py
src/: build_dict.py  defaults.py  grammar.py  grascii.py  load_dict.py  search.py  similarities.py
tests/: .gitignore  test_config.py  test_dictionary.py  test_interactive.py  test_interpreter.py  test_metric.py  test_outline.py  test_parser.py  test_phrasing.py  test_regen.py  test_searchers.py
tests/dictionaries/: comments.txt  count.txt  duplicates.txt  not_grascii.txt  search.txt  sort.txt  spell.txt  too_few_words.txt  uncertainty.txt  words.txt
tests/phrasing/: L1.txt  L11a.txt  L11b.txt  L11c.txt  L11d.txt  L11e.txt  L11f.txt  L11g.txt  L11h.txt  L11i.txt  L19a.txt  L2.txt  L3.txt  L4.txt  L5.txt  L6.txt  L7.txt  wild.txt
