[build-system]
requires = ["setuptools", "wheel", "lark~=1.0", "platformdirs~=4.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
add_imports=["from __future__ import annotations"]

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow."
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "grascii/lark_ambig_tools.py",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
