[build-system]
requires = ["setuptools", "wheel", "lark~=1.0", "platformdirs~=4.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow."
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "grascii/lark_ambig_tools.py",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
extend-exclude = [
  "grascii/lark_ambig_tools.py",
  "dictionaries/",
  "docs/",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # flake8-type-checking
  "TC",
]
ignore = ["SIM102"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
line-ending = "lf"
