
[metadata]
name = grascii
version = 0.3.0
description = A language with tools to facilitate the study of Gregg Shorthand.
long_description = file: docs/README.rst
author = Chanic Panic
author-email = chanicpanic@gmail.com
url = https://github.com/chanicpanic/grascii
license = MIT
license_files = LICENSE.txt
platform = any
requires-dist = setuptools
keywords = shorthand, gregg shorthand, dictionary
classifier =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Text Processing :: General
  Topic :: Text Processing :: Linguistic

[options]
include_package_data = true
python_requires = >= 3.6
packages = find:
install_requires = lark>=1.0.0

[options.package_data]
grascii = 
  defaults.conf
  grammars/*.lark
  words/*.txt
grascii.dictionary = 
  preanniversary/*

[options.entry_points]
console_scripts =
  grascii = grascii.__main__:main

[options.extras_require]
interactive = questionary>=1.5.1

[options.packages.find]
exclude =
  tests

