
[metadata]
name = grascii
version = attr: grascii.__version__
description = A language with tools to facilitate the study of Gregg Shorthand.
long_description = file: docs/README.rst
author = Chanic Panic
author_email = dev@chanicpanic.com
url = https://github.com/grascii/grascii
license = MIT
license_files = LICENSE.txt
platform = any
requires_dist = setuptools
keywords = shorthand, gregg shorthand, dictionary
classifier =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Text Processing :: General
  Topic :: Text Processing :: Linguistic

[options]
include_package_data = true
python_requires = >= 3.7
packages = find:
install_requires =
  lark~=1.0
  platformdirs~=4.0
  importlib-resources~=5.0; python_version<"3.9"

[options.package_data]
grascii =
  defaults.conf
  grammars/*.lark
  words/*.txt
grascii.dictionary =
  preanniversary/*

[options.entry_points]
console_scripts =
  grascii = grascii.__main__:main

[options.extras_require]
interactive = questionary>=1.5.1
docs =
  Sphinx==5.0.2
  sphinx-rtd-theme==1.0.0
  sphinxcontrib-apidoc==0.3.0
  myst-parser==0.18.0
tests =
  pexpect~=4.0; platform_system!="Windows"
  pytest~=7.0
  pytest-cov~=3.0
  pytest-subtests>=0.7.0,<1.0

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 88
extend-ignore = E203
