[metadata]
name = grascii
version = attr: grascii.__version__
description = A language with tools to facilitate the study of Gregg Shorthand.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
author = Chanic Panic
author_email = dev@chanicpanic.com
url = https://github.com/grascii/grascii
license = MIT
license_files = LICENSE
platform = any
requires_dist = setuptools
keywords = shorthand, gregg shorthand, dictionary
classifier =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Text Processing :: General
  Topic :: Text Processing :: Linguistic

[options]
include_package_data = true
python_requires = >= 3.9
packages = find:
install_requires =
  lark>=1.1.8, ==1.*
  platformdirs~=4.0

[options.package_data]
grascii =
  defaults.conf
  grammars/*.lark
grascii.dictionary =
  preanniversary/*
  preanniversary-phrases/*

[options.entry_points]
console_scripts =
  grascii = grascii.__main__:main

[options.extras_require]
interactive = questionary>=1.5.1
docs =
  Sphinx==7.4.7
  sphinx-rtd-theme==3.0.2
  sphinxcontrib-apidoc==0.6.0
  myst-parser==3.0.1
tests =
  pexpect~=4.0; platform_system!="Windows"
  pytest~=7.0
  pytest-cov~=3.0
  pytest-subtests>=0.7.0,<1.0

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 88
extend-ignore = E203
